@@ -208,7 +208,7 @@ WARNFLAGS = -W2 -wd4996 -we4028 -we4142
 WARNFLAGS = -W2
 !endif
 !endif
-WERRORFLAG = -WX -we9002
+WERRORFLAG = -WX
 !if !defined(CFLAGS)
 CFLAGS = $(RUNTIMEFLAG) $(DEBUGFLAGS) $(WARNFLAGS) $(OPTFLAGS) $(PROCESSOR_FLAG) $(COMPILERFLAG)
 !endif
